# optim-raytracer

./: CMakeLists.txt  main.cpp
.devcontainer/: Dockerfile
scenes/: empty.json
src/raymath/: Ray.cpp  Ray.hpp  Vector3.cpp  Vector3.hpp
src/rayscene/: Camera.cpp  Camera.hpp  Intersection.cpp  Intersection.hpp  Mesh.cpp  Mesh.hpp  PhongMaterial.cpp  Plane.cpp  Plane.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
tests/: test_raytracer.cpp
